# Hackathon-II

./: CLAUDE.md  README.md
.claude/agents/: ai-agent-engineer.md  architecture-planner.md  auth-integrator.md  backend-engineer.md  chat-endpoint-developer.md  chatbot-spec-architect.md  chatkit-ui-integrator.md  dapr-reminder-notifier.md  database-designer.md  deploy-agent.md  docker-agent.md  frontend-ui.md  helm-master.md  integration-tester.md  mcp-tools-specialist.md  realtime-sync-agent.md  recurring-task-handler.md  spec-architect.md  task-audit-logger.md  todo-api-agent.md  ui-upgrader.md
.specify/memory/: constitution.md
console/: move_phase1_folders.py  move_to_console.py
phase-I-console/: CLAUDE.md  move_folders.py  move_specs_folders.py
phase-II-full-stack-todo/backend/: .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yaml  pyproject.toml  requirements.txt
phase-II-full-stack-todo/backend/src/: config.py  main.py
phase-II-full-stack-todo/backend/src/core/: database.py  dependencies.py  exceptions.py  jwt_middleware.py  security.py
phase-II-full-stack-todo/backend/src/models/: conversation.py  task.py  user.py
phase-II-full-stack-todo/backend/src/routers/: auth.py  tasks.py
phase-II-full-stack-todo/backend/src/services/: agent_service.py  auth_service.py  task_service.py
phase-II-full-stack-todo/backend/tests/: conftest.py  test_auth.py  test_docs.py  test_errors.py  test_integration.py  test_security.py  test_tasks.py
phase-IV-k8s-deployment/: README.md
phase-V-cloud-deployment/: .env.example  .gitignore  docker-compose.yaml
(+328 files in other folders)
